--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Outfit", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  font-size: 1.6rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-size: 6rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  width: 100%;
+  height: 100vh;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.4) url("./assets/img3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: darken;
+}
+
+.container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-top: 50px;
+  padding-bottom: 220px;
+}
+
+.bottom-box {
+  padding: 20px;
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 20px;
+  width: 100%;
+  margin: 1rem auto;
+  border-radius: 12px;
 }
 
-.App-link {
-  color: #61dafb;
+.weather_type {
+  font-weight: 700;
+  padding-right: 20px;
+  padding-top: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bold {
+  text-align: center;
+  font-weight: 700;
+}
+
+.input {
+  text-align: center;
+  padding: 1rem;
+}
+
+.input input {
+  padding: 0.7rem 1.5rem;
+  font-size: 1rem;
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0.9);
+  color: #fff;
+  outline: none;
+}
+
+::placeholder {
+  color: #f8f8f8;
+}
+
+.errorMessage {
+  text-align: center;
+  font-size: 2rem;
 }
