--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ h1 {
 
 @media only screen and (min-width: 700px) {
   .app {
-    background-size: cover;
+    background-size: stretch;
   }
 }
 
